; ModuleID = '/home/carl/AnghaBench/freebsd/stand/common/extr_misc.c_alloc_pread.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/common/extr_misc.c_alloc_pread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @alloc_pread(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %7, align 8
  %10 = call i8* @malloc(i64 %9)
  store i8* %10, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %35

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @SEEK_SET, align 4
  %18 = call i32 @lseek(i32 %15, i32 %16, i32 %17)
  %19 = icmp eq i32 %18, -1
  br i1 %19, label %20, label %23

20:                                               ; preds = %14
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @free(i8* %21)
  store i8* null, i8** %4, align 8
  br label %35

23:                                               ; preds = %14
  %24 = load i32, i32* %5, align 4
  %25 = load i8*, i8** %8, align 8
  %26 = load i64, i64* %7, align 8
  %27 = call i64 @read(i32 %24, i8* %25, i64 %26)
  %28 = load i64, i64* %7, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %33

30:                                               ; preds = %23
  %31 = load i8*, i8** %8, align 8
  %32 = call i32 @free(i8* %31)
  store i8* null, i8** %4, align 8
  br label %35

33:                                               ; preds = %23
  %34 = load i8*, i8** %8, align 8
  store i8* %34, i8** %4, align 8
  br label %35

35:                                               ; preds = %33, %30, %20, %13
  %36 = load i8*, i8** %4, align 8
  ret i8* %36
}

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i64 @read(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
